syntax = "proto3";

package grpc_sample;
option java_multiple_files = true;
option java_package = "com.likexx.grpc.sample";
option java_outer_classname = "HelloServiceProto";

service HelloService {
  rpc Hello (HelloRequest) returns (HelloReply);
  rpc HelloTest1 (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
